# crane

./: .gitignore  .gitmodules  README.md
DARE/: dare_ibv_rc.c  dare_log.h  proxy.c
apps/NPBMZ/: make.def  mk  readme  run  suite.def
apps/apache/: add-detach-for-pod-check-thread.patch  add-disable-sched-paxos-parent.patch  add-hint-for-cgid.patch  add-init-affinity.patch  add-soba-httpd.patch  add-soba-php.patch  httpd.conf  mk  old-mk  run  run-client  start-server  test.php
apps/chengliu/: 14-03-23-xtern.patch  14-03-24-xtern.patch  getlogicalclock.patch
apps/clamav/: mk  (+4 more)
apps/concoord_archive/concoord-1.0.2/: setup.cfg
apps/concoord_archive/concoord-1.0.2/concoord/: replica.py
apps/concoord_archive/concoord-1.0.2/concoord/test/: test_replicacomeback.py
eval/: apache.cfg  apache_ab.cfg  clean_log.sh  eval.py  eval_one.py  eval_three.py  lighttpd.cfg  lighttpd_ab.cfg  memcached-tiny.cfg  memcached.cfg  mongodb.cfg  mongoose.cfg  mongoose_ab.cfg  mongoose_aget.cfg  mysql.cfg  new-apace-ab.cfg  new-mongodb.cfg  new-mongoose-ab.cfg  new-mysql-sysbench.cfg  pgsql-tiny.cfg  pgsql.cfg  proftpd.cfg  readme.txt  ssdb.cfg
eval-container/: README.md  change_sched_with_paxos_maxmin.sh  change_sched_with_paxos_usleep.sh  checkpoint-restore.sh  checkpoint.py  collect-scheds.sh  get_paxq_stats.sh  grab.py  head  hostfile  launch.py  launcher.sh  master.py  new-run.sh  py_http.py  restore-mg.sh  rsync.sh  rsync_exclude.txt  run-all.sh  run-eval-maxmin.sh  run-eval-usleep.sh  run.sh  start-mg.sh  u1  update-replica-IPs.sh  use-checkpoint-example.sh  worker-build.py  worker-run.py  worker1  worker2
eval-multiMachine/: README.md  checkpoint-restore.sh  criu-cr.py  head  hostfile  master.py  output  rsync.sh  run.sh  worker-build.py  worker-run.py  worker1  workers  wrap-xtern.sh
libevent_paxos/: .gitignore  LICENSE  Makefile  Makefile.bk  README.md  makefile.init  mk  upload
tools/: su-checkpoint.sh  su-restore.sh  todo.txt
xtern/: COPYING  Makefile  Makefile.common  Makefile.config.in  config.status  configure  default.options  readme.txt
xtern/autoconf/: AutoRegen.sh  configure.ac
(+913 files in other folders)
