[metadata]
name = concoord
version = 1.0.2
author = Deniz Altinbuken, Emin Gun Sirer
author-email = deniz@systems.cs.cornell.edu, egs@systems.cs.cornell.edu
maintainer = Deniz Altinbuken
maintainer-email = concoord@systems.cs.cornell.edu
summary = Coordination service for distributed systems.
description-file = README
keywords = concoord, openreplica, coordination, replication, synchronization, paxos, rsm
requires-python = >=2.7
requires-dist = pkginfo
requires-external = python-dnspython, msgpack-python
provides-dist = concoord (1.0.2)
project-url = concoord, http://openreplica.org/
home-page = http://openreplica.org/
download-url = http://openreplica.org/src/

[global]
autodetect = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

